--- a/src/app/components/stack-panel/stack-panel.component.html
+++ b/src/app/components/stack-panel/stack-panel.component.html
@@ -1,12 +1,11 @@
 <mat-accordion class="page-section m-1" id="portfolio">
   <div class="container"> 
     <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title class="masthead-subheading d-flex justify-content-center">
-          <span class="font-weight-bold lead stack-title text-center mb-1 mt-1">{{ this.stack.stackName }}</span>
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-
+        <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'auto'">
+          <mat-panel-title class="masthead-subheading d-flex justify-content-center">
+            <span class="text-center subheading mb-1 mt-1">{{ this.stack.stackName }}</span>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
       <app-knowledge-card></app-knowledge-card>
     </mat-expansion-panel>
   </div>
