insert text justify class

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4036,6 +4036,9 @@ textarea.form-control-lg {
 .tab-content > .active {
   display: block;
 }
+.text-justified {
+  text-align: justify;
+}
 
 .navbar {
   position: relative;
