--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,15 +7,18 @@
             <i class="fa-solid fa-at"></i>&nbsp;<a href="mailto:lucasvieiravicente1@gmail.com">lucasvieiravicente1@gmail.com</a>
         </div>
         <p class="lead mb-2"> 
-            Engenheiro de software profissionalmente a quase 3 anos, porém envolvido com programação a pelo menos {{ getProfessionalTime() }} anos atuando com desenvolvimento web, sempre atendendo as necessidades do projeto e do time conforme a demanda, como back-end ou front-end, finalizando uma formação em Informática para Negócios pela FATEC - Mauá.
+            Engenheiro de software profissionalmente a quase 3 anos, porém envolvido com programação a pelo menos {{ getProfessionalTime() }} anos atuando com desenvolvimento web, atendendo as necessidades do projeto e do time conforme a demanda, como back-end ou front-end, finalizando uma formação em Informática para Negócios pela FATEC - Mauá.
         </p>
         <p class="lead mb-4">
-            Na trajetória profissional colaborou em projetos das mais diversas áreas como: financeiro, investimentos, inspeção e certificação, encarregando-se do processo completo desde o entendimento da necessidade do cliente, negociação das necessidades a serem desenvolvidas e na construção do projeto.
+            Durante sua trajetória profissional colaborou em projetos das mais diversas áreas como: financeiro, investimentos, inspeção e certificação, encarregando-se do processo completo desde o entendimento das necessidades do cliente, negociação das necessidades a serem desenvolvidas e na construção do projeto.
         </p>
         <div class="social-icons">
-            <a class="social-icon" href="https://www.linkedin.com/in/lucas-vieira-vicente" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="https://github.com/lucasvieiravicente" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="social-icon" href="https://api.whatsapp.com/send?phone=5511983773017&text=Olá%20,%20tudo%20bem?%20Te%20encontrei%20no%20seu%20currículo%20online" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a *ngFor="let socialMedia of socialMedias index as i"
+                href="{{ socialMedia.url }}" target="_blank"
+                class="social-icon"
+            >
+                <i class="{{ socialMedia.icon }}"></i>
+            </a>
         </div>
     </div>
 </section>
