adjust on styles and text

--- a/src/app/components/about-project/about-project.component.html
+++ b/src/app/components/about-project/about-project.component.html
@@ -13,8 +13,8 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 
-                <div class="lead m-2 p-4">
-                    <p class="lead p-2 text-justified">{{ project.description }}</p>                    
+                <div class="flex-grow-1 m-2 p-4">
+                    <p class="text-justified">{{ project.description }}</p>                    
                     <a href="{{ project.url }}" target="_blank">
                         <button class="btn btn-light table thead th border rounded">
                             <i class="fa-solid fa-code"></i>&nbsp;
