--- a/src/app/components/knowledge-card/knowledge-card.component.html
+++ b/src/app/components/knowledge-card/knowledge-card.component.html
@@ -8,7 +8,7 @@
       >
 
       <mat-card-header>
-        <mat-card-title class="portfolio masthead-subheading">{{ value.title }}</mat-card-title>
+        <mat-card-title class="subheading mb-2">{{ value.title }}</mat-card-title>
       </mat-card-header>
 
       <div class="p-3 text-center card-image">
