--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <section class="resume-section" id="skills">
   <div class="resume-section-content">
     <h2 class="mb-5">Conhecimento técnico</h2>
-    <div class="subheading mb-3">Resumo da minha experiência como desenvolvedor</div>
+    <div class="subheading mb-3">Experiências técnicas como desenvolvedor</div>
           
     <div class="container" *ngIf="stacks; else loading">
         <app-stack-panel
