--- a/src/app/components/footer-warning/footer-warning.component.scss
+++ b/src/app/components/footer-warning/footer-warning.component.scss
@@ -3,44 +3,51 @@
     padding-top: 5px;
     position: fixed !important;
     bottom: 0 !important;
-    font-weight: 500;           
+    font-weight: 550;           
     background-color: #212529 !important;
     color: white;
-    z-index: 9;
 }
-#cookieContent{
-    float: left;
-    margin-left: 12%;
+#cookieContent {
+    margin-right: 10%;
+}
+#cookieDescription {
+    width: 100%;
     margin-top: 4%;
-    font-size: 1.2vw;
+    font-size: larger;
+    text-align: center;
 }
-#cookieImage{
-    width: 17%;
-    margin-top: 1%;
-    margin-right: 13%;
-    float: right;
+#cookieImage {
+    width: 100%;
+    margin-top: 2%;
 }
-#cookieImage img{
+#cookieImage img {
     cursor: pointer;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
 }
 
-@media (max-width: 902px){
-    .cookiesWarningDiv{
-        padding-top: 2px;
-    }
-
+@media (max-width: 1225px) {
     #cookieContent {
-        width: 50%;
-        margin-left: 2%;
-        float: left;        
-        font-weight: 570;    
-        font-size: 2.7vw;
+        margin-right: 20%;
     }
+}
 
-    #cookieImage {
-        margin-top: 5%;
-        width: 42%;                
-        margin-right: 2%;
-        float: right;
+@media (max-width: 1100px) {
+    #cookieDescription {
+        font-size: large;
+    }
+}
+
+@media (max-width: 991px) {
+    #cookieContent {
+        margin-right: 0%;
+    }
+}
+
+@media (max-width: 470px) {
+    #cookieImage img {
+        width: 90%;
     }
 }
