changed message on footer warning

--- a/src/app/components/footer-warning/footer-warning.component.html
+++ b/src/app/components/footer-warning/footer-warning.component.html
@@ -7,7 +7,7 @@ class="cookiesWarningDiv">
             <p>
                 Esta página utiliza cookies para controle do acesso ao site
                 <br />
-                Caso concorde com o uso dos mesmos só {{ message }} no monstrinho do cookie ao lado.
+                Caso concorde com o uso dos mesmos só {{ message }} no monstrinho do cookie.
                 <br />
             </p>
         </div>
