fix styles on knowledge-card, tech-info and portfolio

--- a/src/app/components/knowledge-card/knowledge-card.component.html
+++ b/src/app/components/knowledge-card/knowledge-card.component.html
@@ -27,6 +27,6 @@
   </div>
   
   <ng-template class="row" #loading>
-    <mat-spinner class="mx-auto"></mat-spinner>
+    <mat-spinner class="mx-auto mt-5"></mat-spinner>
   </ng-template>
 </div>
