--- a/src/app/components/knowledge-card/knowledge-card.component.scss
+++ b/src/app/components/knowledge-card/knowledge-card.component.scss
@@ -1,3 +1,9 @@
+#button {
+    vertical-align: bottom;
+    box-shadow: 1px 1.1px 1px rgba(0, 0, 0, 0.384);
+    margin-bottom: 0;
+}
+
 .card {
     width: 47%;
     max-height: fit-content;
