--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <ng-template class="row" #loading>
-      <mat-spinner class="mr-auto ml-auto"></mat-spinner>
+      <mat-spinner class="mx-auto mt-5"></mat-spinner>
     </ng-template>
   </div>
 </section>
