--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+    <a class="navbar-brand js-scroll-trigger" (click)="scroll('about')">
         <span class="d-block d-lg-none">Lucas Vieira Vicente</span>
         <span class="d-none d-lg-block">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/images/photo1.jpg" alt="..." />
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/images/photo1.jpg" alt="Foto do Lucas" />
         </span>
     </a>
 
@@ -21,22 +21,22 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('about')">Sobre</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#experience">Experiência</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('experience')">Experiência</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#education">Educação</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('education')">Educação</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#skills">Conhecimento</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('skills')">Conhecimento</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#projects">Projetos</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('projects')">Projetos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('contact')">Contato</a>
             </li>
         </ul>
     </div>
