--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -12,12 +12,21 @@
         <p class="lead mb-4">
             Durante sua trajetória profissional colaborou em projetos das mais diversas áreas como: financeiro, investimentos, inspeção e certificação, encarregando-se do processo completo desde o entendimento das necessidades do cliente, negociação das necessidades a serem desenvolvidas e na construção do projeto.
         </p>
-        <div class="social-icons">
+        <div class="social-icons text-center">
             <a *ngFor="let socialMedia of socialMedias index as i"
                 href="{{ socialMedia.url }}" target="_blank"
                 class="social-icon"
             >
                 <i class="{{ socialMedia.icon }}"></i>
+            </a>
+        </div>
+
+        <div class="text-center mt-4">
+            <p class="lead">
+                Caso ainda necessite do meu currículo, você pode baixa-lo, porém recomendo a leitura da página!
+            </p>
+            <a class="btn btn-lg btn-outline-secondary" href="assets/files/curriculoPdf.pdf" target="_blank">
+                <i class="fas fa-download mr-2"></i> Currículo
             </a>
         </div>
     </div>
