fixed styles on about-project

--- a/src/app/components/about-project/about-project.component.html
+++ b/src/app/components/about-project/about-project.component.html
@@ -13,7 +13,7 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 
-                <div id="info" class="flex-grow-1 m-2">
+                <div class="flex-grow-1 m-1 py-2">
                     <p class="lead text-justified">{{ project.description }}</p>                    
                     <a href="{{ project.url }}" target="_blank">
                         <button class="lead btn btn-light table thead th border rounded">
