--- a/src/app/components/knowledge-card/knowledge-card.component.html
+++ b/src/app/components/knowledge-card/knowledge-card.component.html
@@ -13,7 +13,7 @@
 
       <mat-card-content class="text-center mt-3">
         <div class="p-3 text-center card-image">
-          <img class="img-fluid" mat-card-image [src]="getBase64AsImage(value.fileData)" [alt]="getAltDescription(value.title)">
+          <img class="img-fluid mx-auto" mat-card-image [src]="getBase64AsImage(value.fileData)" [alt]="getAltDescription(value.title)">
         </div>
         <button class="btn btn-light font-weight-bold table thead th border rounded" (click)="openInfo(i)">
           Ver mais
