alterações de experiencia

--- a/src/app/components/masthead/masthead.component.html
+++ b/src/app/components/masthead/masthead.component.html
@@ -3,13 +3,23 @@
         <h2 class="mb-5">Experiência</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
+                <h3 class="mb-0">Software Engineer</h3>
+                <div class="subheading mb-3">BTG Pactual</div>
+                <p> 
+                    Desenvolvimento de novas funções e manutenções nos sistemas relacionados ao BTG Pactual Empresas.
+                </p>
+            </div>
+            <div class="flex-shrink-0"><span class="text-secondary">Agosto 2022 - Atualmente</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
                 <h3 class="mb-0">Junior Software Engineer</h3>
                 <div class="subheading mb-3">Iteris Consultoria e Software</div>
                 <p> 
                     Desenvolvimento de novas funções ou manutenções das aplicações web complexas, além de auxiliar os membros mais novos do time na evolução de carreira sendo ponto de referência em alguns projetos.
                 </p>
             </div>
-            <div class="flex-shrink-0"><span class="text-secondary">Março 2021 - Presente</span></div>
+            <div class="flex-shrink-0"><span class="text-secondary">Março 2021 - Julho 2022</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
