updated about page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,10 +7,13 @@
             <i class="fa-solid fa-at"></i>&nbsp;<a href="mailto:lucasvieiravicente1@gmail.com">lucasvieiravicente1@gmail.com</a>
         </div>
         <p class="lead mb-2"> 
-            Engenheiro de software profissionalmente a quase 3 anos, porém envolvido com programação a pelo menos {{ getProfessionalTime() }} anos atuando com desenvolvimento web, atendendo as necessidades do projeto e do time conforme a demanda, como back-end ou front-end, finalizando uma formação em Informática para Negócios pela FATEC - Mauá.
+            Iniciei minha "aventura" a {{ getExperienceTime() }} anos... Estudando algoritmos e lógica, em sequência ingressei na FATEC para estudar Informática para Negócios, e mantive meu foco e interesse na área de engenharia de software. Então a {{ getProfessionalTime() }} anos comecei minha jornada no mercado de trabalho como estagiário em engenharia de software, atuando com desenvolvimento web, atendendo as necessidades do projeto e do time conforme a demanda, tanto com back-end e front-end.
         </p>
         <p class="lead mb-4">
-            Durante sua trajetória profissional colaborou em projetos das mais diversas áreas como: financeiro, investimentos, inspeção e certificação, encarregando-se do processo completo desde o entendimento das necessidades do cliente, negociação das necessidades a serem desenvolvidas e na construção do projeto.
+            Durante essa trajetória complexa, desafiadora e cheia de aprendizado colaborei em projetos das mais diversas áreas como: financeiro, investimentos, inspeção e certificação; encarregando-se do processo completo desde o entendimento das necessidades do cliente, negociação das entregas a serem desenvolvidas e na construção do projeto. Além de que, apesar de não atuar oficialmente em cargos de liderança, atuei nas necessidades diretas dos times o qual participei, auxiliando como um pilar para o time em qualidade técnica e orientações profissionais, a exemplo de pair programming, code review, orientações técnicas e etc...
+        </p>
+        <p class="lead mb-4">
+            
         </p>
         <div class="social-icons text-center">
             <a *ngFor="let socialMedia of socialMedias index as i"
