updated texts on masthead

--- a/src/app/components/masthead/masthead.component.html
+++ b/src/app/components/masthead/masthead.component.html
@@ -5,38 +5,28 @@
             <div class="flex-grow-1">
                 <h3 class="mb-0">Software Engineer</h3>
                 <div class="subheading mb-3">BTG Pactual</div>
-                <p> 
-                    Desenvolvimento de novas funções e manutenções nos sistemas relacionados ao BTG Pactual Empresas.
+                <p class="lead"> 
+                    Atuando na engenharia de software do Primeiro Acesso/Onboarding e Abertura de contas do BTG Empresas, utilizando diversas tecnologias como .NET, React, serviços AWS além de diversos design patterns como DDD, TDD, CQRS, orientação a eventos, Monad e etc...
                 </p>
             </div>
             <div class="flex-shrink-0"><span class="text-secondary">Agosto 2022 - Atualmente</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Junior Software Engineer</h3>
+                <h3 class="mb-0">Software Engineer</h3>
                 <div class="subheading mb-3">Iteris Consultoria e Software</div>
-                <p> 
-                    Desenvolvimento de novas funções ou manutenções das aplicações web complexas, além de auxiliar os membros mais novos do time na evolução de carreira sendo ponto de referência em alguns projetos.
+                <p class="lead">
+                    Atuando com desenvolvimento de sistemas em diversos clientes (REDE, SGS, Easynvest/NuInvest) utilizando diversas tecnologias com C#, e frameworks JS (Angular e React), sistemas cloud (Azure e AWS) e diversos design patterns
                 </p>
             </div>
-            <div class="flex-shrink-0"><span class="text-secondary">Março 2021 - Julho 2022</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-                <h3 class="mb-0">Software Engineer Trainee</h3>
-                <div class="subheading mb-3">Iteris Consultoria e Software</div>
-                <p>
-                    Envolvido com o desenvolvimento de sistemas web, aplicando novas funções ou trabalhando em manutenções necessárias.
-                </p>
-            </div>
-            <div class="flex-shrink-0"><span class="text-secondary">Setembro 2019 - Fevereiro 2021</span></div>
+            <div class="flex-shrink-0"><span class="text-secondary">Setembro 2020 - Julho 2022</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
                 <h3 class="mb-0">Software Engineer Intern</h3>
                 <div class="subheading mb-3">So+ma Vantagens</div>
-                <p>
-                    Estagiário em engenharia de software empregando diversas tecnologias para o desenvolvimento de sistemas Web completo.
+                <p class="lead">
+                    Estagiário em engenheiria de software criando novas funções e prestando manutenção com diversas tecnologias como .NET Core, Microsoft Azure, SQL Server e etc...
                 </p>
             </div>
             <div class="flex-shrink-0"><span class="text-secondary">Dezembro 2019 - Agosto 2020</span></div>
