change header photo and add cursor on hover to links

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand js-scroll-trigger" (click)="scroll('about')">
         <span class="d-block d-lg-none">Lucas Vieira Vicente</span>
         <span class="d-none d-lg-block">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/images/photo1.jpg" alt="Foto do Lucas" />
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/images/myPhoto3.jpg" alt="Foto do Lucas" />
         </span>
     </a>
 
@@ -21,22 +21,22 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" (click)="scroll('about')">Sobre</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('about')"><span class="cursor">Sobre</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" (click)="scroll('experience')">Experiência</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('experience')"><span class="cursor">Experiência</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" (click)="scroll('education')">Educação</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('education')"><span class="cursor">Educação</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" (click)="scroll('skills')">Conhecimento</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('skills')"><span class="cursor">Conhecimento</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" (click)="scroll('projects')">Projetos</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('projects')"><span class="cursor">Projetos</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" (click)="scroll('contact')">Contato</a>
+                <a class="nav-link js-scroll-trigger" (click)="scroll('contact')"><span class="cursor">Contato</span></a>
             </li>
         </ul>
     </div>
