--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
     <div class="resume-section-content">
         <h1 class="mb-0">Lucas Vieira Vicente</h1>
         <div class="subheading mb-4">
-            <i class="fa-solid fa-map-location-dot"></i> Mauá - São Paulo<br>
+            <i class="fa-solid fa-map-location-dot"></i>&nbsp;<a href="https://goo.gl/maps/1eTjhJJapNkz1fE99" target="_blank">Mauá - São Paulo</a><br>
             <i class="fa-solid fa-mobile"></i> +55 (11) 98377-3017<br>
             <i class="fa-solid fa-at"></i>&nbsp;<a href="mailto:lucasvieiravicente1@gmail.com">lucasvieiravicente1@gmail.com</a>
         </div>
