--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -5,10 +5,10 @@
           <div class="flex-grow-1">
               <h3 class="mb-0">FATEC - Mauá</h3>
               <div class="subheading mb-3">Tecnologia em Informática para Negócios</div>
-              <div>Mauá - São Paulo</div>
-              <p>GPA: 8.22</p>
+              <div class="lead">Mauá - São Paulo</div>
+              <p class="lead">GPA: 8.22</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-secondary">Agosto 2017 - Julho 2022</span></div>
+          <div class="flex-shrink-0"><span class="subheading date">Agosto 2017 - Julho 2022</span></div>
       </div>
   </div>
 </section>
