--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand js-scroll-trigger" (click)="scroll('about')">
         <span class="d-block d-lg-none">Lucas Vieira Vicente</span>
         <span class="d-none d-lg-block">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/images/myPhoto3.jpg" alt="Foto do Lucas" />
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2 cursor" src="assets/images/myPhoto3.jpg" alt="Foto do Lucas" />
         </span>
     </a>
 
