--- a/src/app/components/masthead/masthead.component.html
+++ b/src/app/components/masthead/masthead.component.html
@@ -9,7 +9,7 @@
                     Atuando na engenharia de software do Primeiro Acesso/Onboarding e Abertura de contas do BTG Empresas, utilizando diversas tecnologias como .NET, React, serviços AWS além de diversos design patterns como DDD, TDD, CQRS, orientação a eventos, Monad e etc...
                 </p>
             </div>
-            <div class="flex-shrink-0"><span class="text-secondary">Agosto 2022 - Atualmente</span></div>
+            <div class="flex-shrink-0"><span class="subheading date">Agosto 2022 - Atualmente</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
@@ -19,7 +19,7 @@
                     Atuando com desenvolvimento de sistemas em diversos clientes (REDE, SGS, Easynvest/NuInvest) utilizando diversas tecnologias com C#, e frameworks JS (Angular e React), sistemas cloud (Azure e AWS) e diversos design patterns
                 </p>
             </div>
-            <div class="flex-shrink-0"><span class="text-secondary">Setembro 2020 - Julho 2022</span></div>
+            <div class="flex-shrink-0"><span class="subheading date">Setembro 2020 - Julho 2022</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
@@ -29,7 +29,7 @@
                     Estagiário em engenheiria de software criando novas funções e prestando manutenção com diversas tecnologias como .NET Core, Microsoft Azure, SQL Server e etc...
                 </p>
             </div>
-            <div class="flex-shrink-0"><span class="text-secondary">Dezembro 2019 - Agosto 2020</span></div>
+            <div class="flex-shrink-0"><span class="subheading date">Dezembro 2019 - Agosto 2020</span></div>
         </div>
     </div>
 </section>
